1.8 - Fixed heading line break on mobiles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,16 +57,6 @@ html, body {
     height: 28px;
 }
 
-@media screen and (min-width: 470px) {
-    #headerContainer {
-        zoom: 120%;
-    }
-
-    #infoLabel {
-        zoom: 120%;
-    }
-}
-
 #fractalCanvas {
     position: fixed;
     left: 0;
@@ -88,6 +78,22 @@ h1 {
     font-style: italic;
     text-shadow: 0 0 4px #000, 0 0 12px var(--accent-color);
     width: 320px;
+}
+
+@media screen and (min-width: 471px) {
+    #headerContainer {
+        zoom: 120%;
+    }
+
+    #infoLabel {
+        zoom: 120%;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    h1 {
+        font-size: 10pt;
+    }
 }
 
 p {
